mais um passinho

--- a/Modulo 2/html sistema loja/funcionarios.html
+++ b/Modulo 2/html sistema loja/funcionarios.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Funcionários</title>
 </head>
-<body>
+<body style="font-size: 25px">
     <div>
         <p>Rei das ferramentas</p>
     </div>
@@ -25,19 +25,19 @@
                 Ceo: Leandro Pereira de Jesus 
             </li>
             <li>
-                Gerente Geral: Sandra Edmeia Pinheiro<br>                              
+                Gerente Geral: Sandra Edmeia Pinheiro                              
+            </li>
+            <li>        
+                Desenvolvedor: Jõao Victor Pinheiro Coloma
             </li>
             <li>
-                Desenvolvedor: Jõao Victor Pinheiro Coloma<br>
+                Desenvolvedor Junior: Lucas Pinheiro de Jesus
             </li>
             <li>
-                Desenvolvedor Junior: Lucas Pinheiro de Jesus<br>
+                Gerente de Comunicação: Victória Pinheiro Coloma Ferreira
             </li>
             <li>
-                Gerente de Comunicação: Victória Pinheiro Coloma Ferreira<br>
-            </li>
-            <li>
-                Gerente de Marketing: Sara Pinheiro<br>
+                Gerente de Marketing: Sara Pinheiro
             </li>
         </ol>
 </body>
