--- a/Modulo 2/html sistema loja/index.html
+++ b/Modulo 2/html sistema loja/index.html
@@ -27,9 +27,9 @@
         <p>Siga-nos nas redes sociais!</p>
 
         <div>
-            <img src="./imagem/Facebook.png"/>
-            <img src="./imagem/Instagram.jpg"/>
-            <img src="./imagem/whatsapp.jpg"/>
+            <img style="width:100px" src="./imagem/Facebook.png"/>
+            <img style="width:100px" src="./imagem/Instagram.jpg"/>
+            <img style="width:100px" src="./imagem/whatsapp.jpg"/>
         </div>
     </div>
 </body>
