--- a/Modulo 2/html sistema loja/index.html
+++ b/Modulo 2/html sistema loja/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Rei das ferramentas</title>
-</head>
+        <link rel="stylesheet" href="styles.css" type="text/css">
+        </head>
 <body>
+    
+   
     <div>
         <h1>Bem-vindos ao <em> Rei das ferramentas</em>!</h1>
         <p>Aqui você encontra tudo em ferramentas!</p>
@@ -17,6 +20,8 @@
         <a href="./ctrl-estoque.html">Controle de Estoque</a>
         <a href="./add-produto.html">Adicionar Produto</a>
         <a href="./funcionarios.html">Funcionários</a>
+        <a href="./vendas.html">Vendas</a>
+        <a href="./historico-de-vendas.html">Histórico de vendas</a>
     </div>
 
     <div>
