--- a/Modulo 2/html sistema loja/add-produto.html
+++ b/Modulo 2/html sistema loja/add-produto.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Adicionar Produto</title>
+    <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 <body>
     <div>
@@ -16,6 +17,8 @@
         <a href="./ctrl-estoque.html">Controle de Estoque</a>
         <a href="./add-produto.html">Adicionar Produto</a>
         <a href="./funcionarios.html">Funcionários</a>
+        <a href="./vendas.html">Vendas</a>
+        <a href="./historico-de-vendas.html">Histórico de vendas</a>
     </div>
 
     
