--- a/Modulo 2/html sistema loja/ctrl-estoque.html
+++ b/Modulo 2/html sistema loja/ctrl-estoque.html
@@ -5,17 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Controle de Estoque</title>
-</head>
+    <link rel="stylesheet"  type="text/css" href="controleestoque.css">
+   </head>
 <body>
-    <div>
+    <div class="div">
         <p>Rei das ferramentas</p>
     </div>
     
-    <div>
+    <div class="negrito">
         <a href="./index.html">Página Inicial</a>
         <a href="./ctrl-estoque.html">Controle de Estoque</a>
         <a href="./add-produto.html">Adicionar Produto</a>
         <a href="./funcionarios.html">Funcionários</a>
+        <a href="./vendas.html">Vendas</a>
+        <a href="./historico-de-vendas.html">Histórico de vendas</a>
     </div>
 
     <h2>Controle de Estoque</h2>
