--- a/Modulo 2/html sistema loja/funcionarios.html
+++ b/Modulo 2/html sistema loja/funcionarios.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Funcionários</title>
+    <link rel="stylesheet" href="styles.css" type="text/css">    
 </head>
-<body style="font-size: 25px">
+<body>
     <div>
         <p>Rei das ferramentas</p>
     </div>
@@ -16,13 +17,15 @@
         <a href="./ctrl-estoque.html">Controle de Estoque</a>
         <a href="./add-produto.html">Adicionar Produto</a>
         <a href="./funcionarios.html">Funcionários</a>
+        <a href="./vendas.html">Vendas</a>
+        <a href="./historico-de-vendas.html">Histórico de vendas</a>
     </div>
 
     <h2>Funcionários</h2>
     <!-- Crie uma lista de funcionários usando as tags que você aprendeu hoje abaixo \/ -->
         <ol>
-            <li>
-                Ceo: Leandro Pereira de Jesus 
+            <li class="negrito">
+                Ceo: Leandro Pereira de Jesus
             </li>
             <li>
                 Gerente Geral: Sandra Edmeia Pinheiro                              
