--- a/Modulo 2/projeto-portifolio/index.html
+++ b/Modulo 2/projeto-portifolio/index.html
@@ -9,23 +9,38 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
-    <div>
-        <h1>Meu Portifólio</h1>
-    </div>
-    <div>
-       <h1>Oi, eu sou Leandro</h1>
-    </div>
-    <div>
-       <p>
-        Desde 2005 tenho trabalhado com o público em geral, mas sempre gostei da área de tecnologia
-       e a poucos meses atrás recebi um convite para aprender programação, porém não deu certo devido ao 
-       meu trabalho. Então conheci a Labenu e estou aqui me apresentando a vocês.
-       </p>
-    </div>
+   <image>
+
+   </image>
+    <header>
+      <h1>Portifólio</h1>
+      <div id="titulo">
+         <h1>Oi, Meu nome é </h1>
+         <h1>Leandro Pereira de Jesus</h1>
+      </div>
+      <ul>
+         <a href="#"><li>Quem sou eu</li></a>
+         <a href="#"><li>Galeria</li></a>
+         <a href="#"><li>Experiências</li></a>
+      </ul>
+    </header>
+         <main>
+            <aside>
+               <h2>Eu estou estudando para me tornar um desenvolvedor web</h2>
+               <form>
+                  <input type="text" placeholder="Nome">
+                  <input type="email" placeholder="E-mail">
+                  <input type="submit" value="Enviar">
+               </form>
+            </aside>
+            <article>
+               <img src="./images/web developers.jpg" alt="imagem desenvolvedor">
+            </article>
+         </main>
     <footer>
          <div class="conteudo-rodape">
             <h3>Meu Portifólio</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas deserunt aliquid sit nulla cupiditate?</p>
+            <p>Siga nos em nossas redes sociais</p>
              <ul class="sociais">
                 <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
