estou com pressa

--- a/Modulo 2/projeto-portifolio/index.html
+++ b/Modulo 2/projeto-portifolio/index.html
@@ -13,15 +13,15 @@
 
    </image>
     <header>
-      <h1>Portifólio</h1>
-      <div id="titulo">
+      <div>
+         <h1>Portifólio</h1>
          <h1>Oi, Meu nome é </h1>
          <h1>Leandro Pereira de Jesus</h1>
       </div>
       <ul>
-         <a href="#"><li>Quem sou eu</li></a>
-         <a href="#"><li>Galeria</li></a>
-         <a href="#"><li>Experiências</li></a>
+         <a id="link" href="#"><li>Quem sou eu</li></a>
+         <a id="link" href="./galeria.html"><li>Galeria</li></a>
+         <a id="link" href="#"><li>Experiências</li></a>
       </ul>
     </header>
          <main>
@@ -42,11 +42,11 @@
             <h3>Meu Portifólio</h3>
             <p>Siga nos em nossas redes sociais</p>
              <ul class="sociais">
-                <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-google"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a></li>
+                <li><a href="https://www.google.com/"><i class="fa-brands fa-google"></i></a></li>
+                <li><a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a></li>
              </ul>
 
          </div>
