me deseje sorte

--- a/Modulo 2/projeto-portifolio/galeria.html
+++ b/Modulo 2/projeto-portifolio/galeria.html
@@ -9,20 +9,30 @@
 </head>
 <body>
     <header>
-        <section>
-            <h1>Galeria de Projetos</h1>
-        </section>
-        <div>
-            <ul>
-                <a href="#"><li><p>Blackjack</p></li></a>
-                <a href="#"><li><p>Bugfixes</p></li></a>
-                <a href="#"><li><p>Projeto Lista Js</p></li></a>
-            </ul>
-        </div>
-        <main>
-            
-        </main>
+        <h1>Galeria</h1>
+        <ul>
+            <li>
+                <a href="#"><P>Blackjack</P></a>
+                <a href="#"><P>Projeto Lista Js</P></a>
+                <a href="#"><P>Bugfixes</P></a>
+            </li>
+        </ul>
     </header>
-    <a href="./index.html"><button>Voltar</button></a>
+    <main>
+        <div>
+            <img src="./imagens/Blackjack.png">
+            <p>Neste projeto utilizei os conhecimentos que adquiri em estruturas condicionais para criar um jogo de Blackjack</p>
+        </div>
+        <div>
+            <img src="./imagens/Projeto Lista Js.png">
+            <p>Aqui está uma lista de problemas propostos que foram resolvidos com o auxílio dos instrutores</p>
+        </div>
+        <div>
+            <img src="">
+            <p>lorem ipsum</p>
+        </div>
+        <button>Voltar</button>
+        <footer>Labenu 2022</footer>
+    </main>
 </body>
 </html>
