--- a/Modulo 2/projeto-portifolio/index.html
+++ b/Modulo 2/projeto-portifolio/index.html
@@ -9,9 +9,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
-   <image>
-
-   </image>
     <header>
       <div>
          <h1>Portifólio</h1>
@@ -34,7 +31,7 @@
                </form>
             </aside>
             <article>
-               <img src="./images/web developers.jpg" alt="imagem desenvolvedor">
+               <img src="./imagens/web developers.jpg" alt="imagem desenvolvedor">
             </article>
          </main>
     <footer>
