--- a/Modulo 2/projeto-portifolio/galeria.html
+++ b/Modulo 2/projeto-portifolio/galeria.html
@@ -10,28 +10,27 @@
 <body>
     <header>
         <h1>Galeria</h1>
-        <ul>
-            <li>
-                <a href="#"><P>Blackjack</P></a>
-                <a href="#"><P>Projeto Lista Js</P></a>
-                <a href="#"><P>Bugfixes</P></a>
-            </li>
-        </ul>
+        <div class="display">  
+            <a href="./index.html"><P>Home</P></a>
+            <a href="./sobremim.html"><P>Sobre mim</P></a>
+        </div>
     </header>
     <main>
         <div>
+            <h1>Black Jack</h1>
             <img src="./imagens/Blackjack.png">
-            <p>Neste projeto utilizei os conhecimentos que adquiri em estruturas condicionais para criar um jogo de Blackjack</p>
+            <p>Neste projeto utilizei os conhecimentos que adquiri em estruturas condicionais para criar um jogo de Blackjack.</p>
         </div>
         <div>
+            <h1>Projeto lista 1</h1>
             <img src="./imagens/Projeto Lista Js.png">
-            <p>Aqui está uma lista de problemas propostos que foram resolvidos com o auxílio dos instrutores</p>
+            <p>Aqui está uma lista de problemas propostos que foram resolvidos com o auxílio dos instrutores.</p>
         </div>
         <div>
-            <img src="">
-            <p>lorem ipsum</p>
+            <h1>Projeto lista 2</h1>
+            <img src="./imagens/Projeto 2.png">
+            <p>E mais alguns exercícios propostos solucinados.</p>
         </div>
-        <button>Voltar</button>
         <footer>Labenu 2022</footer>
     </main>
 </body>
