--- a/Modulo 2/projeto-portifolio/index.html
+++ b/Modulo 2/projeto-portifolio/index.html
@@ -16,9 +16,8 @@
          <h1>Leandro Pereira de Jesus</h1>
       </div>
       <ul>
-         <a id="link" href="#"><li>Quem sou eu</li></a>
+         <a id="link" href="./sobremim.html"><li>Sobre mim</li></a>
          <a id="link" href="./galeria.html"><li>Galeria</li></a>
-         <a id="link" href="#"><li>Experiências</li></a>
       </ul>
     </header>
          <main>
