--- a/Modulo 2/projeto-portifolio/sobremim.html
+++ b/Modulo 2/projeto-portifolio/sobremim.html
@@ -16,12 +16,19 @@
         </div>
     </header>
         <main> 
-            <h1>Quem sou eu?</h1>
-            <p>Me chamo Leandro Pereira de Jesus, tenho 36 anos, sou formado em produção industrial pela fatec de Botucatu
-                no momento estou estudando programação, pois tenho a intenção de fazer transição de carreira para a área 
+            <img src="./imagens/Quem sou eu.jpg" alt="QUEM SOU EU?">    
+            <p>Me chamo Leandro Pereira de Jesus, tenho 36 anos, sou formado em produção industrial pela fatec de Botucatu.
+                Neste momento estou estudando programação na instituição Labenu, pois tenho a intenção de fazer transição de carreira para a área 
                 de tecnologia. Desejo futuramente adquirir experiência para criar o meu próprio negócio na área tecnológica
                 e desenvolver meus próprios programas e aplicativos visando o bem-estar do usúario.
             </p>
+            
+            <ul>
+                <h1 id="right">Instituições de Ensino</h1>
+                <li>Escola Estadual Cardoso de Almeida</li>
+                <li>Fatec Botucatu</li>
+                <li>Labenu</li>
+            </ul>
         </div>
     </main>
     <footer>
