--- a/Modulo 2/labetube1/index.html
+++ b/Modulo 2/labetube1/index.html
@@ -14,42 +14,42 @@
         <button>Buscar</button>
     </header>
     <main>
-        <div>
+        <div class="separar">
             <video src="https://storage.googleapis.com/future-apis.appspot.com/1.mp4" poster="./imagens/download.jpg" width="300" height="300"
             preload="auto" controls="autoplay" loop="true"></video>
             <p>Media 1</p>
         </div>
-        <div>
+        <div class="separar">
             <video src="https://storage.googleapis.com/future-apis.appspot.com/10.mp4" poster="./imagens/download.jpg" width="300" height="300"
             preload="auto" controls="autoplay" loop="true"></video>
             <p>Media 2</p>
         </div>
-         <div>
+         <div class="separar">
             <video src="https://storage.googleapis.com/future-apis.appspot.com/9.mp4" poster="./imagens/download.jpg" width="300" height="300"
             preload="auto" controls="autoplay" loop="true"></video>
             <p>Media 3</p>
         </div> 
-        <div>
+        <div class="separar">
             <video src="https://storage.googleapis.com/future-apis.appspot.com/4.mp4" poster="./imagens/download.jpg" width="300" height="300"
             preload="auto" controls="autoplay" loop="true"></video>
             <p>Media 4</p>
         </div> 
-        <div>
+        <div class="separar">
             <video src="https://storage.googleapis.com/future-apis.appspot.com/5.mp4" poster="./imagens/download.jpg" width="300" height="300"
             preload="auto" controls="autoplay" loop="true"></video>
             <p>Media 5</p>
         </div> 
-        <div>
+        <div class="separar">
             <video src="https://storage.googleapis.com/future-apis.appspot.com/6.mp4" poster="./imagens/download.jpg" width="300" height="300"
             preload="auto" controls="autoplay" loop="true"></video>
             <p>Media 6</p>
         </div> 
-        <div>
+        <div class="separar">
             <video src="https://storage.googleapis.com/future-apis.appspot.com/7.mp4" poster="./imagens/download.jpg" width="300" height="300"
             preload="auto" controls="autoplay" loop="true"></video>
             <p>Media 7</p>
         </div> 
-        <div>
+        <div class="separar">
             <video src="https://storage.googleapis.com/future-apis.appspot.com/8.mp4" poster="./imagens/download.jpg" width="300" height="300"
             preload="auto" controls="autoplay" loop="true"></video>
             <p>Media 8</p>
