--- a/Modulo 2/labetube1/index.html
+++ b/Modulo 2/labetube1/index.html
@@ -8,7 +8,7 @@
     <title>Tela Principal</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body id="cafe">
+<body>
     <header>
         <h1>Future</h1>
         <button>Buscar</button>
